[tool.poetry]
name = "me3-signing-api-server"
version = "0.1.0"
description = ""
authors = ["Gary Tierney <gary.tierney@fastmail.com>"]
license = "Apache 2.0 OR MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
